# par

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  ParallelFunctions.cpp
include/: ParallelFunctions.hpp  par.h
src/: ParallelFunctions.cpp
test/: CMakeLists.txt  ParallelFunctions.test.cpp  par.test.h
